修复文档与代码一致性问题
- 统一镜像大小估算：tier0=22GB, tier1=22GB, tier2=37GB
- 添加 vLLM 兼容性警告 (BUILD_TIER=2 可能失败)
- 明确说明 .env 不会自动加载，需手动 source
- 完善 requirements-accel.txt 中的 vLLM 版本说明
- 更新相关文档以保持一致性

--- a/requirements-accel.txt
+++ b/requirements-accel.txt
@@ -5,6 +5,8 @@
 # ==============================================================================
 # Note: Uses precompiled wheels to avoid source compilation
 # 注意: 使用预编译 wheel 避免源码编译
+# vLLM 0.15.1 currently expects PyTorch 2.9.1 + CUDA 12.8.
+# vLLM 0.15.1 当前期望 PyTorch 2.9.1 + CUDA 12.8。
 # ==============================================================================
 
 # ===== High-Performance Inference / 高性能推理 =====
