--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ATLAS CI
+name: ATLAS CI/CD
 
 on:
   push:
@@ -7,6 +7,9 @@ on:
       - 'Dockerfile'
       - 'requirements*.txt'
       - '.github/workflows/**'
+      - 'tests/**'
+    tags:
+      - 'v*'
   pull_request:
     branches: [main]
   schedule:
@@ -16,6 +19,7 @@ on:
 
 env:
   IMAGE_NAME: atlas
+  REGISTRY: ghcr.io
 
 jobs:
   # Syntax check / 语法检查
@@ -62,6 +66,76 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  # Security scan / 安全扫描
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build image for scanning / 构建镜像用于扫描
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: ${{ env.IMAGE_NAME }}:scan
+          build-args: |
+            BUILD_TIER=0
+            ENABLE_MATERIALS=0
+          cache-from: type=gha
+      
+      - name: Run Trivy vulnerability scanner / 运行 Trivy 漏洞扫描
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.IMAGE_NAME }}:scan
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+      
+      - name: Upload Trivy results to GitHub Security / 上传结果到 GitHub Security
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
+      
+      - name: Run Trivy in table mode / 以表格模式运行 Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.IMAGE_NAME }}:scan
+          format: 'table'
+          severity: 'CRITICAL,HIGH'
+
+  # Package import tests / 包导入测试
+  package-tests:
+    runs-on: ubuntu-latest
+    needs: build-test
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Build test image / 构建测试镜像
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: ${{ env.IMAGE_NAME }}:test
+          build-args: |
+            BUILD_TIER=0
+            ENABLE_MATERIALS=0
+          cache-from: type=gha
+      
+      - name: Test package imports / 测试包导入
+        run: |
+          docker run --rm \
+            -v ${{ github.workspace }}/tests:/tests \
+            ${{ env.IMAGE_NAME }}:test \
+            python /tests/test_import_packages.py
+
   # Check for dependency updates / 检查依赖更新
   check-updates:
     runs-on: ubuntu-latest
@@ -79,3 +153,48 @@ jobs:
           pip install pip-tools
           echo "=== Checking requirements.txt ===" 
           pip-compile --dry-run requirements.txt 2>&1 | grep -E "^\s+#" | head -20 || echo "No updates"
+
+  # Release build and push / 发布构建和推送
+  release:
+    runs-on: ubuntu-latest
+    needs: [lint, build-test, security-scan, package-tests]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log in to GitHub Container Registry / 登录 GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata / 提取元数据
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+      
+      - name: Build and push base image / 构建和推送基础镜像
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BUILD_TIER=0
+            ENABLE_MATERIALS=0
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
