fix: 修复 CI healthcheck 测试失败问题并改进测试功能
问题修复：
- CI 中为 healthcheck 测试设置正确的 IMAGE_NAME=atlas:test
- test_healthcheck.sh 现在接受容器名作为参数
- 真正测试 Docker HEALTHCHECK 状态而非仅运行基本命令

功能改进：
- 支持检查运行中容器的 HEALTHCHECK 状态
- 兼容无参数调用（向后兼容）
- 更新 tests/README.md 说明新用法

相关问题：
- SECURITY.md 占位文本已在之前的提交中修复
- 健康检查测试现在名副其实

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -162,7 +162,7 @@ jobs:
           docker run -d --name atlas-healthcheck \
             ${{ env.IMAGE_NAME }}:test sleep 300
           cd tests
-          bash test_healthcheck.sh atlas-healthcheck
+          IMAGE_NAME=${{ env.IMAGE_NAME }}:test bash test_healthcheck.sh atlas-healthcheck
           docker rm -f atlas-healthcheck
       
       - name: Run Docker build tests / 运行 Docker 构建测试
