--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Free up disk space / 释放磁盘空间
+        run: |
+          echo "Before cleanup:"
+          df -h
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          echo "After cleanup:"
+          df -h
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -72,6 +84,13 @@ jobs:
     needs: build-test
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Free up disk space / 释放磁盘空间
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo docker image prune --all --force
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -115,6 +134,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Free up disk space / 释放磁盘空间
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo docker image prune --all --force
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -142,6 +168,13 @@ jobs:
     needs: build-test
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Free up disk space / 释放磁盘空间
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo docker image prune --all --force
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
