--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,7 @@ jobs:
   # Package import tests / 包导入测试
   package-tests:
     runs-on: ubuntu-latest
-    needs: build-test
+    needs: security-scan  # 串行执行，避免并行构建导致磁盘不足
     steps:
       - uses: actions/checkout@v4
       
@@ -165,7 +165,7 @@ jobs:
   # Full test suite / 完整测试套件
   full-tests:
     runs-on: ubuntu-latest
-    needs: build-test
+    needs: package-tests  # 串行执行，避免并行构建导致磁盘不足
     steps:
       - uses: actions/checkout@v4
       
