fix: 修复遗漏的路径引用和 CI 配置问题
修复内容：

1. check-updates.sh 路径引用 (Critical)
   - 第 57-60 行仍使用 SCRIPT_DIR 而非 PROJECT_ROOT
   - 导致无法找到 requirements*.txt 文件
   - 修复：使用 PROJECT_ROOT 正确引用项目根目录文件

2. ci.yml 路径过滤和检查 (Critical)
   - paths 未包含 scripts/**，导致 scripts/ 下修改不触发 CI
   - lint job 只检查根目录 *.sh，未检查 scripts/*.sh
   - 修复：添加 scripts/** 到 paths，lint 增加 scripts/*.sh 检查

3. TESTS.md 分支保护说明 (Low)
   - 说明"已配置"但未解释 enforce_admins=false 的含义
   - 修复：明确说明允许管理员绕过，适用于个人项目

验证：
✓ check-updates.sh 使用 PROJECT_ROOT
✓ ci.yml paths 包含 scripts/**
✓ ci.yml lint 检查 scripts/*.sh
✓ TESTS.md 明确说明 admin bypass
✓ BUILD.md 已包含完整 scripts/ 结构（前次提交）

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
       - '.github/workflows/**'
       - 'tests/**'
       - '*.sh'
+      - 'scripts/**'
     tags:
       - 'v*'
   pull_request:
@@ -28,9 +29,19 @@ jobs:
       
       - name: Check shell scripts / 检查 shell 脚本
         run: |
+          # Check root wrappers / 检查根目录 wrapper
           for script in *.sh; do
-            echo "Checking $script..."
-            bash -n "$script"
+            if [ -f "$script" ]; then
+              echo "Checking $script..."
+              bash -n "$script"
+            fi
+          done
+          # Check actual scripts / 检查实际脚本
+          for script in scripts/*.sh; do
+            if [ -f "$script" ]; then
+              echo "Checking $script..."
+              bash -n "$script"
+            fi
           done
           echo "All scripts OK"
       
