--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,38 +27,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Check shell scripts with shellcheck / 使用 shellcheck 检查脚本
-        run: |
-          # Install shellcheck / 安装 shellcheck
-          sudo apt-get update && sudo apt-get install -y shellcheck
-          
-          # Check root wrappers / 检查根目录 wrapper
-          for script in *.sh; do
-            if [ -f "$script" ]; then
-              echo "Checking $script with shellcheck..."
-              shellcheck -x "$script"
-              echo "Checking $script syntax..."
-              bash -n "$script"
-            fi
-          done
-          
-          # Check actual scripts / 检查实际脚本
-          for script in scripts/*.sh; do
-            if [ -f "$script" ]; then
-              echo "Checking $script with shellcheck..."
-              shellcheck -x "$script"
-              echo "Checking $script syntax..."
-              bash -n "$script"
-            fi
-          done
-          
-          echo "✅ All scripts passed checks"
+      - name: Run pre-commit hooks / 运行 pre-commit 钩子
+        uses: pre-commit/action@v4.3.0
+        with:
+          extra_args: --all-files --show-diff-on-failure
       
       - name: Check Dockerfile / 检查 Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-          failure-threshold: warning
+          failure-threshold: error
           config: .hadolint.yaml
       
       - name: Validate requirements files / 验证 requirements 文件
@@ -105,7 +83,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: lint
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && github.repository_owner == 'chenzhuyu2004'
     permissions:
       contents: read
       packages: write
