--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,14 @@ repos:
     rev: v0.9.0.6
     hooks:
       - id: shellcheck
-        args: ['--severity=warning']
+        args: ['--severity=error']
+
+  # Shell formatting (shfmt)
+  - repo: https://github.com/mvdan/sh
+    rev: v4.12.4
+    hooks:
+      - id: shfmt
+        args: ['-i', '2', '-sr']
 
   # General file checks / 通用文件检查
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -26,4 +33,4 @@ repos:
     rev: v2.12.0
     hooks:
       - id: hadolint-docker
-        args: ['--failure-threshold', 'warning']
+        args: ['--failure-threshold', 'error']
