--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,8 @@ repos:
         args: ['--severity=error']
 
   # Shell formatting (shfmt)
-  - repo: https://github.com/mvdan/sh
-    rev: v4.12.4
+  - repo: https://github.com/scop/pre-commit-shfmt
+    rev: v3.12.0-2
     hooks:
       - id: shfmt
         args: ['-i', '2', '-sr']
