--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read VERSION / 读取版本号
+        id: version
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
+
       - name: Log in to GitHub Container Registry / 登录 GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -173,6 +177,7 @@ jobs:
           build-args: |
             BUILD_TIER=0
             ENABLE_MATERIALS=0
+            VERSION=${{ steps.version.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
