--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Read VERSION / 读取版本号
+        id: version
+        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
+
       - name: Log in to GitHub Container Registry / 登录 GHCR
         uses: docker/login-action@v3
         with:
@@ -55,6 +59,7 @@ jobs:
           build-args: |
             BUILD_TIER=${{ matrix.tier }}
             ENABLE_MATERIALS=0
+            VERSION=${{ steps.version.outputs.version }}
           cache-from: type=gha,scope=tier${{ matrix.tier }}
           cache-to: type=gha,mode=max,scope=tier${{ matrix.tier }}
 
