--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,16 @@ jobs:
   # Fast checks for every PR/push / 快速检查（每次 PR/push）
   lint:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.12']
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python for pre-commit
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install pre-commit and hooks
         run: |
@@ -39,7 +42,11 @@ jobs:
 
       - name: Run pre-commit on all files
         run: |
-          pre-commit run --all-files
+          if [ "${{ matrix.python-version }}" = "3.12" ]; then
+            SKIP=shellcheck pre-commit run --all-files
+          else
+            pre-commit run --all-files
+          fi
 
       - name: Smoke build Dockerfile / 轻量构建校验
         run: |
