Improve CI caching and docs version notes

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@
 # ==============================================================================
 
 # Build Options / 构建选项
+VERSION=0.6            # Image version / 镜像版本 (see VERSION file)
 BUILD_TIER=0           # 0=base, 1=llm, 2=full
 ENABLE_MATERIALS=0     # 1=enable materials science / 启用材料科学
 IMAGE_NAME=atlas       # Docker image name / Docker 镜像名
+ATLAS_IMAGE=atlas:v0.6-base  # Full image tag / 完整镜像标签
 NO_CACHE=0             # 1=rebuild without cache / 禁用缓存重建
 
 # Runtime Options / 运行选项
