--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install pre-commit and hooks
+      - name: Cache pre-commit hooks
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ runner.os }}-py${{ matrix.python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit-${{ runner.os }}-py${{ matrix.python-version }}-
+
+      - name: Install pre-commit
         run: |
           pip install pre-commit
-          pre-commit install-hooks
 
       - name: Run pre-commit on all files
         run: |
