--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,25 +35,25 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Cache pre-commit hooks
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ runner.os }}-py${{ matrix.python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}
-          restore-keys: |
-            pre-commit-${{ runner.os }}-py${{ matrix.python-version }}-
-
-      - name: Install pre-commit
-        run: |
-          pip install pre-commit
-
       - name: Run pre-commit on all files
-        run: |
-          pre-commit run --all-files
+        uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --all-files
+
+      - name: Set up Docker Buildx
+        if: matrix.python-version == '3.10'
+        uses: docker/setup-buildx-action@v3
 
       - name: Smoke build Dockerfile / 轻量构建校验
-        run: |
-          docker build --target smoke -t atlas:smoke .
+        if: matrix.python-version == '3.10'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: atlas:smoke
+          target: smoke
+          cache-from: type=gha,scope=smoke
+          cache-to: type=gha,mode=max,scope=smoke
 
       - name: Validate requirements files / 验证 requirements 文件
         run: |
