--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
       - '.hadolint.yaml'
       - 'mypy.ini'
       - '*.sh'
+      - 'projects/**'
     tags:
       - 'v*'
   pull_request:
@@ -21,6 +22,7 @@ on:
       - '.hadolint.yaml'
       - 'mypy.ini'
       - '*.sh'
+      - 'projects/**'
   workflow_dispatch:
 
 env:
