--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,13 @@
 [mypy]
+# Keep aligned with the lowest CI Python version
 python_version = 3.10
+
+# Third-party libraries are installed in the Docker image,
+# but may be missing in local dev environments.
 ignore_missing_imports = True
+
+# Keep checks fast and avoid deep import cycles.
 follow_imports = skip
+
+# Reduce noise for generated or version-specific ignores.
 warn_unused_ignores = False
