chore: add yaml document starts

--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,7 +1,6 @@
-# Auto-label PRs based on file changes
-# 根据文件更改自动为 PR 添加标签
-
+---
 name: Labeler
+# Auto-label PRs based on file changes / 根据文件更改自动为 PR 添加标签
 
 on:
   pull_request:
