--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,7 +1,6 @@
-# Mark stale issues and pull requests
-# 标记过期的 issues 和 PRs
-
+---
 name: Stale
+# Mark stale issues and pull requests / 标记过期的 issues 和 PRs
 
 on:
   schedule:
