--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,4 +1,4 @@
----
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 name: Release Drafter
 # Automatically draft releases based on PRs / 根据 PR 自动起草发布说明
 
