--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -1,4 +1,4 @@
----
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow
 name: Sync Labels
 # Sync GitHub labels from configuration file / 从配置文件同步 GitHub 标签
 
