--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -7,7 +7,8 @@ on:
     types: [opened, edited, synchronize, reopened]
 
 permissions:
-  pull-requests: read
+  issues: write
+  pull-requests: write
 
 jobs:
   check:
@@ -19,13 +20,14 @@ jobs:
           fetch-depth: 0
 
       - name: Check commit messages
+        id: commitlint
         uses: wagoid/commitlint-github-action@v6
         with:
           configFile: .commitlintrc.json
         continue-on-error: true  # Don't fail the build, just warn
 
       - name: Comment on PR if commit messages need improvement
-        if: failure()
+        if: steps.commitlint.outcome == 'failure'
         uses: actions/github-script@v7
         with:
           script: |
