--- a/examples/docker-compose/.env.example
+++ b/examples/docker-compose/.env.example
@@ -9,8 +9,8 @@ JUPYTER_PORT=8888
 JUPYTER_TOKEN=atlas
 
 # GPU configuration / GPU 配置
-# Options: all, 0, 1, "0,1", etc.
-GPU_DEVICES=all
+# Options: all, 1, 2, etc.
+GPU_COUNT=all
 
 # Host paths / 主机路径
 HOST_WORKSPACE=./workspace
