--- a/docker/atlas/.env.example
+++ b/docker/atlas/.env.example
@@ -14,3 +14,7 @@ NO_CACHE=0             # 1=rebuild without cache / 禁用缓存重建
 # Runtime Options / 运行选项
 GPU_DEVICE=all         # all, 0, 1, 0,1 etc.
 CONTAINER_NAME=atlas-dev
+
+# Healthcheck Options / 健康检查选项
+ATLAS_HEALTHCHECK_ENABLED=1      # 0=disable healthcheck / 禁用健康检查
+ATLAS_HEALTHCHECK_REQUIRE_CUDA=1 # 0=allow CPU-only / 允许 CPU-only
