--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -2,7 +2,7 @@
 name: Commit Message Check
 # Validate commit messages follow conventional commits format / 验证提交消息遵循约定式提交格式
 
-on:
+'on':
   pull_request:
     types: [opened, edited, synchronize, reopened]
 
@@ -35,5 +35,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '⚠️ Some commit messages may not follow the [Conventional Commits](https://www.conventionalcommits.org/) format.\n\n**Recommended format**:\n```\ntype(scope): subject\n\nOptional body\n\nOptional footer\n```\n\n**Examples**:\n- `feat: add GPU memory optimization`\n- `fix(docker): resolve build timeout issue`\n- `docs: update installation guide`\n- `chore(deps): bump pytorch to 2.10.0`\n\nWhile not required, following this format helps maintain a clean git history.'
+              body: "⚠️ Some commit messages may not follow the Conventional Commits format. Please use the form: type(scope): subject — e.g. feat: add GPU memory optimization."
             })
