--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,7 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
+      actions: write
       packages: write
     steps:
       - uses: actions/checkout@v4
@@ -139,7 +140,7 @@ jobs:
 
       - name: Read VERSION / 读取版本号
         id: version
-        run: echo "version=$(cat docker/atlas/VERSION)" >> $GITHUB_OUTPUT
+        run: echo "version=$(cat docker/atlas/VERSION)" >> "$GITHUB_OUTPUT"
 
       - name: Log in to GitHub Container Registry / 登录 GitHub Container Registry
         uses: docker/login-action@v3
@@ -175,19 +176,14 @@ jobs:
           cache-to: type=gha,mode=max,scope=release
           platforms: linux/amd64
 
-      - name: Install cosign / 安装 cosign
-        if: ${{ secrets.COSIGN_PRIVATE_KEY != '' }}
-        uses: sigstore/cosign-installer@v3.5.0
+      - name: Save image digest / 保存镜像摘要
+        run: echo "${{ steps.docker_build.outputs.digest }}" > image-digest.txt
 
-      - name: Sign image / 镜像签名
-        if: ${{ secrets.COSIGN_PRIVATE_KEY != '' }}
-        env:
-          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
-          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
-          COSIGN_YES: "true"
-        run: |
-          cosign sign --key env://COSIGN_PRIVATE_KEY \
-            ${{ env.REGISTRY }}/${{ github.repository }}@${{ steps.docker_build.outputs.digest }}
+      - name: Upload image digest / 上传镜像摘要
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-image-digest
+          path: image-digest.txt
 
       - name: Output release summary / 输出发布摘要
         run: |
